--- a/TPMetodosAgiles/src/main/java/Presentacion/IndexView.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/IndexView.form
@@ -122,10 +122,8 @@
                       <Component id="jButton10" alignment="1" max="32767" attributes="0"/>
                       <Component id="jButton11" alignment="1" max="32767" attributes="0"/>
                       <Component id="jButton12" alignment="1" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="altaUsuario" alignment="0" pref="29" max="32767" attributes="0"/>
-                          <Component id="buscarUsuario" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="altaUsuario" alignment="0" max="32767" attributes="0"/>
+                      <Component id="buscarUsuario" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
