--- a/TPMetodosAgiles/src/main/java/Presentacion/IndexView.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/IndexView.form
@@ -651,6 +651,9 @@
                   <Image iconType="3" name="/Presentacion/budget rollove.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCostoActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel13">
               <Properties>
